# head-scratcher

./: .gitignore  Cargo.toml  README.md
assets/: README.md  sresa1b_ncar_ccsm3-example.3_nc64.nc  sresa1b_ncar_ccsm3-example.4.nc  sresa1b_ncar_ccsm3-example.4_Classic.nc
examples/: read.rs
src/: bin.rs  constants_and_types.rs  error.rs  lib.rs  utils.rs
src/parser/: components.rs  mod.rs
