[package]
name = "netcdf-head-scratcher"
version = "0.1.0"
authors = ["Ugur Cayoglu <cayoglu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.*"
clap  = { version = "2.*.*", optional = true }

[dev-dependencies]
netcdf = "0.6.*"

[features]
binary = ["clap"]

[lib]
name = "headscratcher"

[[bin]]
name = "headscratcher"
path = "src/bin.rs"
required-features = ["binary"]
